# encoded_client

./: .gitignore  Changelog.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-test.yml
docs/: api.rst  conf.py  introduction.rst  usage.rst
docs/api/: encoded.rst  hashfile.rst  sheet.rst  submission.rst
encoded_client/: aws_submission.py  daf.py  encoded.py  fastqname.py  hashfile.py  metadata.py  rdfhelp.py  results.py  submission.py
encoded_client/tests/: file.json  submission_test_common.py  test_encoded.py  test_fastqname.py  test_metadata.py  test_rdfhelp.py  test_results.py  test_sheet.py  test_submission.py
