[metadata]
name = encoded_client
description = interface to the ENCODE DCC portal
author = Diane Trout
author_email = diane@caltech.edu

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
    jsonschema
    pandas
    requests

[options.entry_points]
console_scripts =
    encode_submission = encoded_client.submission:main

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
rdf =
    lxml >= 2.2.4
    rdflib
submit =
    awscli

[options.package_data]
* = *.turtle
